--- a/views/index.ejs
+++ b/views/index.ejs
@@ -162,10 +162,10 @@
                     <div class="content__hot__carousel">
                         <!-- 버튼 클릭당 2개의 아이템 이동, 보이는 최대 갯수 5개  -->
                         <ul>
-                            <% for(let i = 0; i < 5; i++) { %>
+                            <% for(let i = 0; i < 10; i++) { %>
                             <li>
                                 <a href="/">
-                                    <img src="/images/itemsample2.jfif" />
+                                    <img src="/images/itemsample2.jfif" width="250px" />
                                     <div>
                                         <span class="txt-bold"
                                             >테스트2-<%= (i+1) %></span
