--- a/shopping/views/index.ejs
+++ b/shopping/views/index.ejs
@@ -5,8 +5,8 @@
   <title>
     <%= title %>
   </title>
-  <link rel='stylesheet' href='/stylesheets/reset.css' />
-  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel='stylesheet' href='/css/reset.css' />
+  <link rel='stylesheet' href='/css/style.css' />
 </head>
 
 <body>
@@ -56,45 +56,29 @@
       <span class="_1st-content--slide">
         <div class="slide--wrapper">
           <span class="slide--item">
-            <img src="images/bag.png" alt="curation1">
+            <!-- <img src="" alt=""> -->
           </span>
           <span class="slide--item">
-            <img src="images/diygagoo.png" alt="curation2">
+            <!-- <img src="" alt=""> -->
           </span>
           <span class="slide--item">
-            <img src="images/twignewyork.png" alt="curation3">
+            <!-- <img src="" alt=""> -->
           </span>
         </div>
         <span class="slide--arrow">
           <button class="left-button">＜</button>
           <button class="scroll-button"></button>
-          <button class="scroll-button"></button>
+          <button class="scroll-button slide-on"></button>
           <button class="scroll-button"></button>
           <button class="right-button">＞</button>
         </span>
       </span>
     </div>
-    <ul class="main__2nd-content">
-      <li>
-        <img src="images/jemyun.jpg" alt="">
-        <div class="_2nd-content--title">원하는 재료를 넣어 뽑는 제면기</div>
-        <div class="_2nd-content--description">집에서 맛보는 쫄깃한 면발</div>
-      </li>
-      <li>
-        <img src="images/gobal.jpg" alt="">
-        <div class="_2nd-content--title">고발색 명품 블러셔 모음</div>
-        <div class="_2nd-content--description">두 뺨을 화사하게 물들여요</div>
-      </li>
-      <li>
-        <img src="images/ifeof.jfif" alt="">
-        <div class="_2nd-content--title">매력 넘치는 브랜드 이프어프</div>
-        <div class="_2nd-content--description">귀엽고 특이한 디자인으로 모아봤어요.</div>
-      </li>
-      <li>영롱하게 빛나는</li>
-    </ul>
+    <div class="main__2nd-content">
+      <!-- ul>li*4 로딩시 삽입 -->
+    </div>
     <div class="main__see-more-button">더보기▽</div>
     <ul class="main__3rd-content">
-      <!-- 품절주의! 역대급 핫딜 -->
       <li></li>
       <li></li>
       <li></li>
@@ -106,7 +90,7 @@
 
 
 
-  <script type="module" src="./javascripts/slide.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
