--- a/views/parts/sectionTop.ejs
+++ b/views/parts/sectionTop.ejs
@@ -16,9 +16,9 @@
         <button><i class="fas fa-angle-right"></i></button>
       </div>
       <ul class="main-top-slide-select">
-        <li></li>
-        <li></li>
-        <li></li>
+        <li class="page-btn"></li>
+        <li class="page-btn"></li>
+        <li class="page-btn"></li>
       </ul>
     </div>
   </div>
