feat: 케로셀 애니메이션 구현

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,42 +77,50 @@ nav .add-on .add-on__login li {
 .main-banner .main-banner__static {
   background-color: yellow;
   position: absolute;
+  display: inline-block;
 }
 .main-banner .main-banner__slide {
   background-color: red;
   padding: 0 60px;
   height: 340px;
-  width: 600px;
+  width: 685px;
+  margin-left: 500px;
   overflow: hidden;
-  position: absolute;
-  left: 400px;
+  position: relative;
 }
 .main-banner .main-banner__slide .slide-bundle {
   display: flex;
   position: absolute;
   justify-content: flex-start;
   background-color: greenyellow;
+  left: -585px;
 }
 .main-banner .main-banner__slide .slide-bundle li {
-  margin: 0 30px;
+  display: inline-block;
+  margin-left: 100px;
+}
+.main-banner .main-banner__slide .slide-bundle li:nth-child(3) {
+  margin-right: 100px;
 }
 .main-banner .main-banner__slide .slide-bundle.active {
-  transform: translate3d(485px, 0, 0);
+  transform: translate3d(585px, 0, 0);
+  transition: transform 0.5s;
 }
 .main-banner .main-banner__slide .slide-bundle.left {
-  transform: translate3d(-485px, 0, 0);
+  transform: translate3d(-585px, 0, 0);
+  transition: transform 0.5s;
 }
 .main-banner .main-banner__slide .slide__right {
   position: absolute;
-  left: 590px;
+  left: 630px;
   top: 50%;
-  z-index: 1;
+  z-index: 2;
 }
 .main-banner .main-banner__slide .slide__left {
   position: absolute;
-  left: -20;
+  left: 50px;
   top: 50%;
-  z-index: 1;
+  z-index: 2;
 }
 
 /*# sourceMappingURL=style.css.map */
