--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -94,46 +94,77 @@ nav {
   background-color: rosybrown;
   position: relative;
   padding: 0 40px;
+  // overflow: hidden;
   .main-banner__static {
     background-color: yellow;
     position: absolute;
-    //   pa
+    // padding-right: 100px;
+    display: inline-block;
   }
   .main-banner__slide {
     background-color: red;
     padding: 0 60px;
     height: 340px;
-    width: 600px;
+    width: 685px;
+    margin-left: 500px;
+    // z-index: 1;
+    // left: -100;
+    // height: 700px;
     overflow: hidden;
-    position: absolute;
-    left: 400px;
+    // top: 30px;
+    // position: absolute;
+    position: relative;
+    // left: 400px;
     .slide-bundle {
       display: flex;
+      // width: 1800px;
+      // display: inline-block;
       position: absolute;
       justify-content: flex-start;
       background-color: greenyellow;
+      // top: 30px;
+      left: -585px;
     }
     .slide-bundle li {
-      margin: 0 30px;
+      display: inline-block;
+      margin-left: 100px;
+      // margin-left: 30px;
+      // display: flex;
+      // justify-content: space-between;
+    }
+    .slide-bundle li:nth-child(3) {
+      margin-right: 100px;
     }
     .slide-bundle.active {
-      transform: translate3d(485px, 0, 0);
+      // transition-duration: 3s;
+      transform: translate3d(585px, 0, 0);
+      transition: transform 0.5s;
     }
     .slide-bundle.left {
-      transform: translate3d(-485px, 0, 0);
+      transform: translate3d(-585px, 0, 0);
+      transition: transform 0.5s;
     }
     .slide__right {
       position: absolute;
-      left: 590px;
+      left: 630px;
       top: 50%;
-      z-index: 1;
+      z-index: 2;
     }
     .slide__left {
       position: absolute;
-      left: -20;
+      left: 50px;
       top: 50%;
-      z-index: 1;
+      z-index: 2;
     }
+    // .slide__view-box {
+    //   width: 500px;
+    //   height: 700px;
+    //   position: absolute;
+    //   background-color: indigo;
+    //   left: 600px;
+    //   overflow: hidden;
+    //   // z-index: 1;
+    // }
   }
 }
 // #main {
