--- a/shopping/views/main.ejs
+++ b/shopping/views/main.ejs
@@ -62,14 +62,39 @@
 
       <div class = "main_wrapper">
         <div class = "big_contents">
-            <div class = "best">
-                베스트 이미지
+            <div class="big_contents_wrapper">
+                <div class = "best">
+                    베스트 이미지
+                </div>
+                <div class="container">
+                    <div class="carousel">
+                      <div class="slider">
+                        <section>content for section 1</section>
+                        <section>content for section 2</section>
+                        <section>content for section 3</section>
+                      </div>
+                      <div class="controls">
+                        <span class="arrow left">
+                          <i class="material-icons">
+                            keyboard_arrow_left
+                          </i>
+                         </span>
+                        <span class="arrow right">
+                          <i class="material-icons">
+                          keyboard_arrow_right
+                          </i>
+                         </span>
+                        <ul>
+                          <li class = "selected"></li>
+                          <li></li>
+                          <li></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
             </div>
-            <button class = "prev_button"></button>
-            <div class = "slide_content">
-                슬라이드 이미지
-            </div>
-            <button class = "next_button"></button>
+         
+           
         </div>
 
         <div class = "small_contents">
