--- a/shopping/public/stylesheets/main.scss
+++ b/shopping/public/stylesheets/main.scss
@@ -7,72 +7,64 @@ $logoImg_height: 51px;
 $nav_height: 56px;
 $content_side_padding: 15%;
 $search_color: #cecfd1;
-$bg_color : #f3f3f3;
+$bg_color: #f3f3f3;
 $gray_font: #888;
-$icon_url : url(https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png);
-$icon2_url : url(https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png);
-$icon_size : 130px 90px;
-$nav_font_size : 16px;
-$item_list_size : 200px;
+$icon_url: url(https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png);
+$icon2_url: url(https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png);
+$icon_size: 130px 90px;
+$nav_font_size: 16px;
+$item_list_size: 200px;
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 
-* {
-    border : 1px solid red;
-}
 
 .hide {
     display: none !important;
 }
 
-
-ul, li {
+ul,
+li {
     list-style: none;
-    display:inline;
+    display: inline;
 }
 
-button, input {
-    border:transparent;
+button,
+input {
+    border: transparent;
     background-color: transparent;
 }
 
 .main_icon {
-    width:$logoImg_width;
-    height:$logoImg_height;
+    width: $logoImg_width;
+    height: $logoImg_height;
     background: url("/images/logo_shw.png") no-repeat;
     background-size: cover;
 }
 
-
-
-
-
 .header {
-    display:flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 43px;
     min-width: $content_min_width;
 
     .head_top {
-        width:843px;
-        height:55px;
-        display:flex;
+        width: 843px;
+        height: 55px;
+        display: flex;
         justify-content: space-around;
     }
 
     .nav {
-        width:100%;
-        height:55px;
-        position:relative;
+        width: 100%;
+        height: 55px;
+        position: relative;
         margin-top: 40px;
         border-top: 1px solid #efefef;
         box-shadow: 0 1px rgb(0 0 0 / 16%);
     }
 }
-
-
-
-
 
 .search_box {
     border: 1px solid $search_color;
@@ -84,72 +76,61 @@ button, input {
     align-items: center;
 
     .search {
-        width:578px;
-        height:22px;
+        width: 578px;
+        height: 22px;
         margin-left: 30px;
     }
     .search_btn {
         width: 52px;
         height: 52px;
-       border:0;
-       background-color: transparent;
-       display: flex;
-       justify-content: center;
-       align-items: center;
-
+        border: 0;
+        background-color: transparent;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         .icon_search {
-                background: $icon_url no-repeat;
-                background-size: $icon_size;
-                position: absolute;
-                width: 23px;   
-                height: 23px;
+            background: $icon_url no-repeat;
+            background-size: $icon_size;
+            position: absolute;
+            width: 23px;
+            height: 23px;
         }
-    }   
+    }
 }
-
-
-
-
-
 
 .nav_wrapper {
     margin: 0 auto;
     padding: 0 $content_side_padding;
     min-width: $content_min_width;
 
-
     .category {
-        float:left;
-        position:relative;
+        float: left;
+        position: relative;
 
         button {
             font-size: $nav_font_size;
             width: 122px;
             height: 52px;
-           border:0;
-           background-color: transparent;
-           display: flex;
-           justify-content: space-around;
-           align-items: center;
+            border: 0;
+            background-color: transparent;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
 
             .icon_hamburger {
                 background: $icon_url no-repeat;
                 background-size: $icon_size;
                 background-position: 0 -30px;
-                width: 28px;    
+                width: 28px;
                 height: 28px;
             }
         }
     }
 
-    
-
-
-
     .nav_menu {
         font-weight: 700;
-        float:left;
+        float: left;
         position: relative;
         display: flex;
         justify-content: space-around;
@@ -157,7 +138,7 @@ button, input {
 
     .nav_hashtag {
         color: $gray_font;
-        float:left;
+        float: left;
         position: relative;
         display: flex;
         justify-content: space-between;
@@ -169,8 +150,7 @@ button, input {
         position: absolute;
         display: inline-flex;
         justify-content: space-between;
-        
-    
+
         li > a {
             display: flex;
             justify-content: space-around;
@@ -180,7 +160,7 @@ button, input {
                 background: $icon_url no-repeat;
                 background-size: $icon_size;
                 background-position: -30px -30px;
-                width: 28px;    
+                width: 28px;
                 height: 28px;
             }
 
@@ -188,14 +168,12 @@ button, input {
                 background: $icon_url no-repeat;
                 background-size: $icon_size;
                 background-position: -60px -30px;
-                width: 28px;    
-                height: 28px; 
+                width: 28px;
+                height: 28px;
             }
         }
     }
 }
-
-
 
 .menu_link {
     padding: 0 13px;
@@ -206,19 +184,41 @@ button, input {
 }
 
 
+
+
+
+
+
+
+
 .main {
     display: flex;
     flex-direction: column;
     align-items: center;
-
     padding: 0 10%;
+
+    .main_wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
+
 
 .big_contents {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 
+    .big_contents_wrapper {
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 13%;
+    }
 }
+
 
 .small_contents {
     display: flex;
@@ -232,6 +232,79 @@ button, input {
             width: $item_list_size;
             height: $item_list_size;
         }
+    }
+}
+
+.container {
+    width: 50%;
+    margin: 10px 0px;
+
+    .carousel {
+        width: 74%;
+        height: 400px;
+        position: relative;
+        overflow: hidden;
+    }
+}
+
+.slider {
+    height: 100%;
+    display: flex;
+    width: 300%;
+    transition: all 0.3s;
+
+    section {
+        flex-basis: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.controls .arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+
+    i {
+        font-size: 60px;
+    }
+}
+
+.arrow.left {
+    left: 5px;
+}
+
+.arrow.right {
+    right: 5px;
+}
+
+
+
+
+.controls ul {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translate(-50%);
+    list-style: none;
+    display: flex;
+    padding: 0;
+    margin: 0;
+
+    li {
+        width: 14px;
+        height: 14px;
+        border: 2px solid #333;
+        border-radius: 50px;
+        margin: 10px;
+        cursor: pointer;
+
+    }
+
+    .selected {
+        background: #333;
     }
 }
 
