슬라이더 page-btn hover 효과 추가

--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -224,6 +224,10 @@ body {
                     background-color: $main-grey-color;
                 }
             }
+
+            .page-btn:hover {
+                background-color: $main-black-color;
+            }
         }
 
         .main-top-article-secondline {
