--- a/beemo/views/main.html
+++ b/beemo/views/main.html
@@ -85,7 +85,7 @@
               <img class="_left_top_image" src="" alt="">
             </div>
           </div>
-          <div class="main__first_line__right">
+          <div class="main__first_line__right _main_carousel_box">
             <div class="main__first_line__right__box">
               <div class="_three_image_box">
                 <img class="_right_top_image" src="" alt="">
@@ -95,9 +95,9 @@
             </div>
             <div class="main__first_line__right__nav">
               <span class="main__first_line__right__nav--dotted">
-                <input type="radio" name="dotted" id=""><button class="_dotted_button"></button>
-                <input type="radio" name="dotted" id="" checked><button class="_dotted_button"></button>
-                <input type="radio" name="dotted" id=""><button class="_dotted_button"></button>
+                <input type="radio" class="_radio" name="dotted" id=""><button class="_dotted_button"></button>
+                <input type="radio" class="_radio" name="dotted" id="" checked><button class="_dotted_button"></button>
+                <input type="radio" class="_radio" name="dotted" id=""><button class="_dotted_button"></button>
               </span>
               <button class="main__first_line__right__nav--left_button _main_left_button">&lt;</button>
               <button class="main__first_line__right__nav--right_button _main_right_button">&gt;</button>
@@ -143,7 +143,7 @@
 
 
         <div class="main__third_line">
-          <button class="main__third_line--button _more_data_button">더보기(1/276건) ▼</button>
+          <button class="main__third_line--button _more_data_button">더보기 ▼</button>
         </div>
 
       </div>
