--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -95,6 +95,53 @@ a {
   width: 90%;
 }
 
+.transformX__0 {
+  transform: translateX(0%);
+}
+
+.transformX__1 {
+  transform: translateX(100%);
+}
+
+.transformX__2 {
+  transform: translateX(200%);
+}
+
+.transformX__3 {
+  transform: translateX(300%);
+}
+
+.transformX__4 {
+  transform: translateX(400%);
+}
+
+.transformX__5 {
+  transform: translateX(500%);
+}
+
+.transformX__6 {
+  transform: translateX(600%);
+}
+
+.transformX__7 {
+  transform: translateX(700%);
+}
+
+.transformX__-1 {
+  transform: translateX(-100%);
+}
+
+.transformX__-2 {
+  transform: translateX(-200%);
+}
+
+.transition--opacity {
+  transition: opacity 0.4s;
+}
+.transition--transform {
+  transition: transform 0.4s;
+}
+
 .max-WH-auto, .content__main__carousel .slide, .content__main__one a, .view-li a img, .content__hot__carousel ul li a img, .content__more__view ul li a img {
   max-width: 100%;
   max-height: 100%;
@@ -459,6 +506,53 @@ a {
   width: 90%;
 }
 
+.transformX__0 {
+  transform: translateX(0%);
+}
+
+.transformX__1 {
+  transform: translateX(100%);
+}
+
+.transformX__2 {
+  transform: translateX(200%);
+}
+
+.transformX__3 {
+  transform: translateX(300%);
+}
+
+.transformX__4 {
+  transform: translateX(400%);
+}
+
+.transformX__5 {
+  transform: translateX(500%);
+}
+
+.transformX__6 {
+  transform: translateX(600%);
+}
+
+.transformX__7 {
+  transform: translateX(700%);
+}
+
+.transformX__-1 {
+  transform: translateX(-100%);
+}
+
+.transformX__-2 {
+  transform: translateX(-200%);
+}
+
+.transition--opacity {
+  transition: opacity 0.4s;
+}
+.transition--transform {
+  transition: transform 0.4s;
+}
+
 .max-WH-auto, .content__main__carousel .slide, .content__main__one a, .view-li a img, .content__hot__carousel ul li a img, .content__more__view ul li a img {
   max-width: 100%;
   max-height: 100%;
@@ -605,10 +699,13 @@ a {
   flex-wrap: nowrap;
   position: relative;
   left: -1px;
+  height: 316px;
 }
 .content__hot__carousel ul li {
+  position: absolute;
   flex: 0 0 auto;
   border-right: 1px solid #f1f1f1;
+  transition: opacity 0.4s;
 }
 .content__hot .carousel__special, .content__hot .carousel__special--next, .content__hot .carousel__special--prev {
   top: 50%;
