--- a/shopping/public/stylesheets/main.css
+++ b/shopping/public/stylesheets/main.css
@@ -47,7 +47,7 @@ input {
 }
 
 .search_box {
-  border: 1px solid #cecfd1;
+  border: 1px solid #ececec;
   border-radius: 12px;
   width: 670px;
   height: 54px;
@@ -156,12 +156,15 @@ input {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 10%;
+  background: #f3f3f3;
 }
 .main .main_wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 64%;
+  background: #fff;
+  margin: 20px;
 }
 
 .big_contents {
@@ -176,18 +179,44 @@ input {
   align-items: center;
   margin-left: 13%;
 }
+.big_contents .big_contents_wrapper .best {
+  padding: 28px 0;
+  border: 1px solid #ececec;
+}
 
 .small_contents {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 .small_contents .item_list {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  text-align: center;
+  padding: 0;
+  border: 1px solid #ececec;
 }
-.small_contents .item_list .item_list_img {
+.small_contents .item_list li .item_list_img {
   width: 200px;
   height: 200px;
+  border: 1px solid #ececec;
+  display: inline-block;
+}
+.small_contents .item_list li span {
+  display: block;
+  padding: 2px 0;
+  text-align: left;
+}
+
+.img_title {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.img_text {
+  font-size: 12px;
+  color: #8888;
 }
 
 .container {
@@ -199,6 +228,7 @@ input {
   height: 400px;
   position: relative;
   overflow: hidden;
+  border: 1px solid #ececec;
 }
 
 .slider {
@@ -244,14 +274,19 @@ input {
 }
 .controls ul li {
   width: 14px;
-  height: 14px;
-  border: 2px solid #333;
-  border-radius: 50px;
-  margin: 10px;
-  cursor: pointer;
+  height: 5px;
+  margin: 1px;
+  background: #c8c8c8;
 }
 .controls ul .selected {
   background: #333;
+}
+
+.show_more {
+  width: 100%;
+  height: 80px;
+  background: #ececec;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=main.css.map */
