--- a/shopping/public/stylesheets/main.scss
+++ b/shopping/public/stylesheets/main.scss
@@ -6,7 +6,7 @@ $logoImg_width: 119px;
 $logoImg_height: 51px;
 $nav_height: 56px;
 $content_side_padding: 15%;
-$search_color: #cecfd1;
+$main_gray: #ececec;
 $bg_color: #f3f3f3;
 $gray_font: #888;
 $icon_url: url(https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png);
@@ -17,7 +17,9 @@ $item_list_size: 200px;
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
-
+// * {
+//     border: 1px solid red;
+// }
 
 .hide {
     display: none !important;
@@ -67,7 +69,7 @@ input {
 }
 
 .search_box {
-    border: 1px solid $search_color;
+    border: 1px solid $main_gray;
     border-radius: 12px;
     width: $search_width;
     height: $logoImg_height + 3;
@@ -195,12 +197,16 @@ input {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 10%;
+    background: $bg_color;
 
     .main_wrapper {
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 64%;
+        background: #fff;
+        margin: 20px;
+        
     }
 }
 
@@ -216,24 +222,58 @@ input {
         justify-content: center;
         align-items: center;
         margin-left: 13%;
+
+        .best {
+            padding: 28px 0;
+            border: 1px solid $main_gray;
+        }
     }
+
 }
 
 
 .small_contents {
     display: flex;
     flex-direction: column;
+    width:100%;
+    
 
     .item_list {
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
+        text-align: center;
+        padding: 0;
+        border: 1px solid $main_gray;
 
-        .item_list_img {
-            width: $item_list_size;
-            height: $item_list_size;
+        li {
+            .item_list_img {
+                width: $item_list_size;
+                height: $item_list_size;
+                border: 1px solid $main_gray;
+                display:inline-block;
+            }
+
+            span {
+                display: block;
+                padding: 2px 0;
+                text-align: left;
+            }
         }
     }
 }
+
+
+.img_title {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.img_text {
+    font-size: 12px;
+    color: #8888;
+}
+
 
 .container {
     width: 50%;
@@ -244,6 +284,7 @@ input {
         height: 400px;
         position: relative;
         overflow: hidden;
+        border: 1px solid $main_gray;
     }
 }
 
@@ -252,6 +293,7 @@ input {
     display: flex;
     width: 300%;
     transition: all 0.3s;
+    
 
     section {
         flex-basis: 100%;
@@ -295,12 +337,10 @@ input {
 
     li {
         width: 14px;
-        height: 14px;
-        border: 2px solid #333;
-        border-radius: 50px;
-        margin: 10px;
-        cursor: pointer;
-
+        height: 5px;
+        margin: 1px;
+        background: rgb(200, 200, 200);
+        
     }
 
     .selected {
@@ -308,3 +348,9 @@ input {
     }
 }
 
+.show_more {
+    width: 100%;
+    height: 80px;
+    background: $main_gray;
+    cursor: pointer;
+}
