slider dot에 data attribution을 주었다

--- a/views/parts/sectionTop.ejs
+++ b/views/parts/sectionTop.ejs
@@ -16,9 +16,9 @@
         <button><i class="fas fa-angle-right"></i></button>
       </div>
       <ul class="main-top-slide-select">
-        <li class="page-btn"></li>
-        <li class="page-btn"></li>
-        <li class="page-btn"></li>
+        <li class="page-btn active" data-index="0"></li>
+        <li class="page-btn" data-index="1"></li>
+        <li class="page-btn" data-index="2"></li>
       </ul>
     </div>
   </div>
